@@ -10044,6 +10044,36 @@ int SCIPsnprintf(
    return n;
 }
 
+/** safe version of strncpy
+ *
+ *  Copies string in s to t using at most @a size-1 nonzero characters (strncpy copies size characters). It always adds
+ *  a terminating zero char. Does not pad the remaining string with zero characters (unlike strncpy). Returns the number
+ *  of copied nonzero characters, if the length of s is at most size - 1, and returns size otherwise. Thus, the original
+ *  string was truncated if the return value is size.
+ */
+int SCIPstrncpy(
+   char*                 t,                  /**< target string */
+   const char*           s,                  /**< source string */
+   int                   size                /**< maximal size of t */
+   )
+{
+   int n;
+
+   if ( size <= 0 )
+      return 0;
+
+   /* decrease size by 1 to create space for terminating zero char */
+   --size;
+   for (n = 0; n < size && *s != '\0'; n++)
+      *(t++) = *(s++);
+   *t = '\0';
+
+   if ( *s != '\0' )
+      ++n;
+
+   return n;
+}
+
 /** extract the next token as a integer value if it is one; in case no value is parsed the endptr is set to @p str
  *
  *  @return Returns TRUE if a value could be extracted, otherwise FALSE
